mobile menu overflow fix

--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -77,10 +77,11 @@
 
   .nav_bar_svp_content {
     position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     width: 100%;
-    max-width: 100%;
     height: 100%;
     background: #f4f5f0;
     z-index: 4000;
