--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -93,6 +93,13 @@ h4 {
   line-height: 1.3;
   margin-bottom: 0px;
 }
+
+@media only screen and (max-width: 800px) {
+  h4 {
+    font-size: 1.025rem;
+  }
+}
+
 h5 {
   font-family: "Poppins", sans-serif;
   font-size: 1.1rem;
